--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /*----------------------------------------
-  Cuuston Fonts
+  Custom Fonts
 ----------------------------------------*/
 @font-face {
     font-family: bw-regular;
